Rename Event, Separator, Button visibility fix

--- a/457/styles.css
+++ b/457/styles.css
@@ -18,6 +18,31 @@ footer {
     width: 100%;
 }
 
+#separator {
+    height: 100vh;
+    width: 10px;
+    background: brown;
+    background-color: brown;
+    /*background-image: url(textures/T_Separator.png);*/
+}
+
+.scrollable-container::-webkit-scrollbar {
+    padding: 20px;
+    width: 30px;
+}
+
+.scrollable-container::-webkit-scrollbar-track {
+    background-color: #f1f1f1;
+}
+
+.scrollable-container::-webkit-scrollbar-thumb {
+    background-color: gray;
+}
+
+.scrollable-container::-webkit-scrollbar {
+    background-color: darkgrey;
+}
+  
 /* ----- Canvases ----- */
 
 .canvas-container {
@@ -38,9 +63,10 @@ footer {
 }
 
 #upgrades-container {
-    height: 100%;
     display: flex;
     flex-direction: column;
+    height: 100%;
+    overflow-y: auto;
 }
 
 .upgrade-canvas {
@@ -63,10 +89,12 @@ footer {
 #button-container {
     display: flex;
     flex-direction: column;
+    height: 100%;
+    overflow-y: auto;
 }
-  
+
 .shopButton {
-    display: flex;
+    display: none;
     align-items: center;
     justify-content: space-between;
     padding: 10px;
@@ -141,8 +169,8 @@ footer {
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
     width: 400px;
     pointer-events: none;
-  }
-  
+}
+
 .hoverWindow-content {
     height: 100%;
 }
@@ -168,4 +196,4 @@ footer {
     height: 64px;
     margin-right: 10px;
 }
-  
+
